# AI-EXP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
scripts/: diagnose.sh
src/k8s_mcp/: __main__.py  auth.py  config.py  kube.py  logging_config.py  server.py  tools.py
