[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-mcp"
version = "0.1.0"
description = "MCP server for operating arbitrary Kubernetes resources via the dynamic client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "kubernetes>=30.0.0",
    "PyYAML>=6.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
k8s-mcp = "k8s_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
